# DumbGame

./: .travis.yml  README.md  setup.cfg
.travis/: build.sh  descriptor.json
dumbgame/: __main__.py  main.py
