[metadata]
name = dumbgame
version = 100.99.98
description = A game for dummies
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
    Topic :: Software Development :: Libraries :: pygame
keywords = game, space, simulator
project_urls =
    Source=https://github.com/nfearnley/DumbGame
    Tracker=https://github.com/nfearnley/DumbGame/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
install_requires =
    digicolor @ git+git://github.com/DigiDuncan/DigiColor
    numpy==1.19.0

[options.extras_require]
dev =
    autopep8==1.4.4
    flake8==3.7.9
    pytest==5.3.1
    PyInstaller==3.6

[options.entry_points]
console_scripts =
    dumbgame=dumbgame.main:main

[flake8]
ignore = E501
per-file-ignores =
    */__init__.py:F401,F403
